--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
-    "vaul": "^1.0.0"
+    "vaul": "^1.0.0",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
