--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-use": "^17.5.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "uuid": "^10.0.0",
     "vaul": "^1.0.0",
     "zustand": "^5.0.0"
