--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.441.0",
     "next": "14.2.13",
+    "next-auth": "^4.24.11",
     "prisma": "^5.21.1",
     "qs": "^6.13.1",
     "react": "^18",
