--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^5.21.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -43,6 +44,7 @@
     "ts-node": "^10.9.2",
     "uuid": "^10.0.0",
     "vaul": "^1.0.0",
+    "zod": "^3.24.1",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
