--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.441.0",
     "next": "14.2.13",
     "next-auth": "^4.24.11",
+    "nextjs-toploader": "^3.7.15",
     "prisma": "^5.21.1",
     "qs": "^6.13.1",
     "react": "^18",
